--- a/assignment1/css1/styles.css
+++ b/assignment1/css1/styles.css
@@ -26,9 +26,26 @@ img {
 .column {
   float: left;
   width: 33.33%;
-  padding: 10px;
+  padding: 20px;
 }
 
+.textbox {
+	background: white;
+	text-align: center;
+	font-family: Helvetica;
+}
+
+.p1 {
+	color: #0d0d0d;
+	padding-top: 20px;
+}
+
+.p2 {
+	color: #262626;
+	padding-bottom: 20px;
+}
+
+/*
 .p1 {
 	background: white;
 	font-family: Helvetica;
@@ -42,3 +59,4 @@ img {
 	text-align: center;
 	color: #262626;
 }
+*/
